<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="selectImage"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:id="@+id/tv_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ytlf_dictionaries38"
        android:layout_below="@id/image"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_below="@id/tv_describe"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="name: "
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/layout_name"
        android:onClick="onRegister"
        android:text="@string/ytlf_dictionaries39"/>

    <Button
        android:id="@+id/btn_loadpersons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/btn_register"
        android:onClick="onLoadPersons"
        android:text="@string/ytlf_dictionaries40"/>

    <Button
        android:id="@+id/btn_deletepersons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/btn_loadpersons"
        android:onClick="onDeletePersons"
        android:text="@string/ytlf_dictionaries41"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/btn_deletepersons"
        android:onClick="onClear"
        android:text="@string/ytlf_dictionaries42"/>
</RelativeLayout>