<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.firefly.faceEngine.other.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/ytlf_dictionaries32"/>
        <Switch
            android:id="@+id/switch_recognition_rgbcamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/ytlf_dictionaries33"/>
        <Switch
            android:id="@+id/switch_recognition_ircamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/ytlf_dictionaries34"/>
        <Switch
            android:id="@+id/switch_mirroring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/ytlf_dictionaries35"/>
        <Switch
            android:id="@+id/switch_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:paddingLeft="20dp"
        android:visibility="visible"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/ytlf_dictionaries36"/>
        <Spinner
            android:id="@+id/spinner_rotate_rgb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:entries="@array/screen_rotate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:paddingLeft="20dp"
        android:visibility="visible"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:text="@string/ytlf_dictionaries37"/>
        <Spinner
            android:id="@+id/spinner_rotate_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:entries="@array/screen_rotate"/>
    </LinearLayout>
</LinearLayout>